# ot_ex

./: .gitignore  mix.exs
lib/ot/: rust.ex  text.ex  type.ex
lib/ot/text/: application.ex  composition.ex  transformation.ex
native/rust_ot/: Cargo.toml
native/rust_ot/src/: lib.rs
native/rust_ot/src/ot/: mod.rs  utilities.rs
test/ot/text/: application_test.exs  composition_test.exs  transformation_test.exs
test/support/: fuzzer.ex
