[package]
name = "rust_ot"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rust_ot"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { version = "0.22.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_rustler = { git = "https://github.com/codesandbox/serde_rustler", branch = "update_rustler_again" }

[dev-dependencies]
rand = { version = "0.7.3" }
criterion = { version = "0.3" }